esp32cam-car/build/log/idf_py_stdout_output_165613
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/build/bootloader/esp-idf/esptool_py && /home/tvconss/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/tvconss/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/build/bootloader/bootloader.bin
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/12] Building CXX object esp-idf/setup_esp32_cam/CMakeFiles/__idf_setup_esp32_cam.dir/setup_esp32_cam.cpp.obj
FAILED: esp-idf/setup_esp32_cam/CMakeFiles/__idf_setup_esp32_cam.dir/setup_esp32_cam.cpp.obj 
/home/tvconss/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/build/config -I/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/setup_esp32_cam/include -I/home/tvconss/esp/esp-idf/components/newlib/platform_include -I/home/tvconss/esp/esp-idf/components/freertos/config/include -I/home/tvconss/esp/esp-idf/components/freertos/config/include/freertos -I/home/tvconss/esp/esp-idf/components/freertos/config/xtensa/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/tvconss/esp/esp-idf/components/freertos/esp_additions/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include/soc -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/tvconss/esp/esp-idf/components/esp_hw_support/dma/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/tvconss/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/tvconss/esp/esp-idf/components/heap/include -I/home/tvconss/esp/esp-idf/components/heap/tlsf -I/home/tvconss/esp/esp-idf/components/log/include -I/home/tvconss/esp/esp-idf/components/soc/include -I/home/tvconss/esp/esp-idf/components/soc/esp32 -I/home/tvconss/esp/esp-idf/components/soc/esp32/include -I/home/tvconss/esp/esp-idf/components/soc/esp32/register -I/home/tvconss/esp/esp-idf/components/hal/platform_port/include -I/home/tvconss/esp/esp-idf/components/hal/esp32/include -I/home/tvconss/esp/esp-idf/components/hal/include -I/home/tvconss/esp/esp-idf/components/esp_rom/include -I/home/tvconss/esp/esp-idf/components/esp_rom/esp32/include -I/home/tvconss/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/tvconss/esp/esp-idf/components/esp_rom/esp32 -I/home/tvconss/esp/esp-idf/components/esp_common/include -I/home/tvconss/esp/esp-idf/components/esp_system/include -I/home/tvconss/esp/esp-idf/components/esp_system/port/soc -I/home/tvconss/esp/esp-idf/components/esp_system/port/include/private -I/home/tvconss/esp/esp-idf/components/xtensa/esp32/include -I/home/tvconss/esp/esp-idf/components/xtensa/include -I/home/tvconss/esp/esp-idf/components/xtensa/deprecated_include -I/home/tvconss/esp/esp-idf/components/lwip/include -I/home/tvconss/esp/esp-idf/components/lwip/include/apps -I/home/tvconss/esp/esp-idf/components/lwip/include/apps/sntp -I/home/tvconss/esp/esp-idf/components/lwip/lwip/src/include -I/home/tvconss/esp/esp-idf/components/lwip/port/include -I/home/tvconss/esp/esp-idf/components/lwip/port/freertos/include -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/managed_components/espressif__esp32-camera/driver/include -I/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/managed_components/espressif__esp32-camera/conversions/include -I/home/tvconss/esp/esp-idf/components/driver/deprecated -I/home/tvconss/esp/esp-idf/components/driver/i2c/include -I/home/tvconss/esp/esp-idf/components/driver/touch_sensor/include -I/home/tvconss/esp/esp-idf/components/driver/twai/include -I/home/tvconss/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/tvconss/esp/esp-idf/components/esp_pm/include -I/home/tvconss/esp/esp-idf/components/esp_ringbuf/include -I/home/tvconss/esp/esp-idf/components/esp_driver_gpio/include -I/home/tvconss/esp/esp-idf/components/esp_driver_pcnt/include -I/home/tvconss/esp/esp-idf/components/esp_driver_gptimer/include -I/home/tvconss/esp/esp-idf/components/esp_driver_spi/include -I/home/tvconss/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/tvconss/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/tvconss/esp/esp-idf/components/esp_driver_i2s/include -I/home/tvconss/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/tvconss/esp/esp-idf/components/sdmmc/include -I/home/tvconss/esp/esp-idf/components/esp_driver_sdspi/include -I/home/tvconss/esp/esp-idf/components/esp_driver_sdio/include -I/home/tvconss/esp/esp-idf/components/esp_driver_dac/include -I/home/tvconss/esp/esp-idf/components/esp_driver_rmt/include -I/home/tvconss/esp/esp-idf/components/esp_driver_tsens/include -I/home/tvconss/esp/esp-idf/components/esp_driver_sdm/include -I/home/tvconss/esp/esp-idf/components/esp_driver_i2c/include -I/home/tvconss/esp/esp-idf/components/esp_driver_uart/include -I/home/tvconss/esp/esp-idf/components/vfs/include -I/home/tvconss/esp/esp-idf/components/esp_driver_ledc/include -I/home/tvconss/esp/esp-idf/components/esp_driver_parlio/include -I/home/tvconss/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/common_struct/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car=. -fmacro-prefix-map=/home/tvconss/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -frtti -fuse-cxa-atexit -MD -MT esp-idf/setup_esp32_cam/CMakeFiles/__idf_setup_esp32_cam.dir/setup_esp32_cam.cpp.obj -MF esp-idf/setup_esp32_cam/CMakeFiles/__idf_setup_esp32_cam.dir/setup_esp32_cam.cpp.obj.d -o esp-idf/setup_esp32_cam/CMakeFiles/__idf_setup_esp32_cam.dir/setup_esp32_cam.cpp.obj -c /home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/setup_esp32_cam/setup_esp32_cam.cpp
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/setup_esp32_cam/setup_esp32_cam.cpp:23:17: error: 'CAM_PIN_HREF' was not declared in this scope; did you mean 'CAM_PIN_PWDN'?
   23 |     .pin_href = CAM_PIN_HREF,
      |                 ^~~~~~~~~~~~
      |                 CAM_PIN_PWDN
[3/12] No install step for 'bootloader'
[4/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/esp32cam-car.cpp.obj
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/esp32cam-car.cpp:15:31: warning: converting to non-pointer type 'int' from NULL [-Wconversion-null]
   15 | static int connectionHandle = NULL;
      |                               ^~~~
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/esp32cam-car.cpp: In function 'void task_send_image(void*)':
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/esp32cam-car.cpp:25:35: warning: NULL used in arithmetic [-Wpointer-arith]
   25 |           if (connectionHandle != NULL)
      |                                   ^~~~
In file included from /home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/esp32cam-car.h:17,
                 from /home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/esp32cam-car.cpp:1:
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/setup_esp32_cam/include/setup_esp32_cam.h: At global scope:
/home/tvconss/Workspace/quan-ly-giao-thong/esp32cam-car/main/components/setup_esp32_cam/include/setup_esp32_cam.h:65:18: warning: 'esp_err_t init_camera()' declared 'static' but never defined [-Wunused-function]
   65 | static esp_err_t init_camera(void);
      |                  ^~~~~~~~~~~
ninja: build stopped: subcommand failed.
